# BOBJECT_engine

./: .gitignore  Bobject_Engine.cpp  Bobject_Engine.h  CMakeLists.txt  CMakePresets.json  CameraController.cpp  CameraController.h  ContextConverter.cpp  ConvertImage.cpp  EngineDefaults.cpp  EngineDefaults.h  ExtractNormalMap.cpp  FileManager.cpp  FileManager.h  GenerateNormalMap.h  ImageDataType.h  ImageProcessor.cpp  ImageProcessor.h  Images.h  InputManager.cpp  InputManager.h  LICENSE  LoadLists.h  Makefile  MapSpaceTranslator.cpp  Materials.cpp  Materials.h  Meshes.cpp  Meshes.h  Pipelines.h  README.md  Remapper.cpp  Remapper.h  SobelX.comp  SobelY.comp  StudioSession.cpp  StudioSession.h  SurfaceConstructor.cpp  SurfaceConstructor.h  TestCheckboxButton.h  (+17 more)
cmake/: FindOpenCV.cmake  Findglfw.cmake  Findglm.cmake
computeShaders/: Averager.comp  Averager.h  AveragerComp.spv  AveragerHelper.txt  AveragerVert.spv  BoxAverager.comp  BoxAveragerVert.spv  CoordIterativeAverager.comp  CoordIterativeAveragerComp.spv  CoordIterativeAveragerHelper.txt  CoordMapRead.comp  CoordMapReadComp.spv  CoordMapReadHelper.txt  CreateCoordMap.comp  CreateCoordMapComp.spv  CreateCoordMapHelper.txt  FilterDefault.comp  FilterDefaultHelper.txt  GaussBlurX.comp  GaussBlurXVert.spv  GaussBlurY.comp  GaussBlurYVert.spv  GradRemap.comp  GradRemap.h  GradRemapHelper.txt  GradRemapVert.spv  IterativeAverager.comp  IterativeAveragerComp.spv  IterativeAveragerHelper.txt  Kuwahara.comp  Kuwahara.h  KuwaharaComp.spv  KuwaharaHelper.txt  KuwaharaVert.spv  NormalConvertor.frag  NormalConvertor.vert  NormalGenerator.frag  NormalGenerator.vert  NormalGeneratorFrag.spv  NormalGeneratorVert.spv  (+30 more)
examples/exampleModels/: Shark.mtl
fonts/: ConvertFont.cpp  ConvertFont.py  ConvertFontLayout.py  coolvetica_sdf_layout.json
fonts/headers/: coolvetica_sdf.h
include/: AC_BF.h  AC_Flat.h  AC_OS_BF.h  AC_TS_BF.h  Averager.h  BF.h  BakedImages.h  BoxAverager.h  CoordIterativeAverager.h  CoordMapRead.h  CreateCoordMap.h  D2NButton.h  DiffuseText.h  Flat.h  GaussBlurX.h  GaussBlurY.h  GradRemap.h  HAverager.h  ImageDataType.h  IterativeAverager.h  Kuwahara.h  LoadButton.h  NormalGenerator.h  NormalText.h  OSButton.h  OSToTSConverter.h  OS_BF.h  OS_EdgeFill.h  OpenButton.h  PauseButton.h  PlayButton.h  PlusButton.h  RGB_2_YCbCr.h  ReferenceKuwahara.h  RenderedButton.h  SaveButton.h  SettingsButton.h  ShaderDataType.h  SobelCombined.h  SobelX.h  (+18 more)
shaders/: AC_BFfrag.spv  AC_BFshader.frag  AC_BFshader.vert  AC_Flatfrag.spv  AC_Flatshader.frag  AC_OS_BFfrag.spv  AC_OS_BFshader.frag  AC_TS_BFfrag.spv  AC_TS_BFshader.frag  AC_TS_BFvert.spv  BF.h  BFfrag.spv  BFshader.frag  BFshader.vert  BFvert.spv  ConvertShaders.cpp  FilterDefault.comp  FilterDefault.h  Flat.h  Flatshader.frag  Flatshader.vert  Kuwahara.comp  Kuwahara.h  NormalConvertor.frag  NormalConvertor.h  NormalConvertor.vert  NormalConvertorVert.spv  NormalGenerator.frag  NormalGenerator.h  NormalGenerator.vert  OS_BF.h  OS_BFfrag.spv  OS_BFshader.frag  OS_BFshader.vert  OS_BFvert.spv  ReferenceKuwahara.comp  ReferenceKuwahara.h  ReferenceKuwaharaVert.spv  ShaderDataType.h  SobelX.comp  (+35 more)
textures/: .PlayButton.png-autosave.kra  .RenderButtons.kra-autosave.kra  .SearchSizeText.png-autosave.kra  .TextButton.kra-autosave.kra  BackButton.png~  ConvertImage.cpp  ConvertImages.py  D2NButton.h  DiffuseText.h  DiffuseText.png~  ImageDataType.h  LoadButton.h  LoadButton.png~  NormalText.h  OSButton.h  OpenButton.h  PauseButton.h  PlayButton.h  PlusButton.h  RenderButtons.kra  RenderButtons.kra~  RenderedButton.h  RenderedButton.png~  SaveButton.h  SaveButton.png~  SettingsButton.h  TangentSpace.h  TestCheckboxButton.h  TextButton.kra  TextButton.kra~  UnrenderedButton.h  UnrenderedButton.png~  WebcamOffButton.h  WebcamOnButton.h  WebcamViewButton.h  WireframeButton.h
textures/headers/: BakedImages.h
